# LCIO

./: CMakeLists.txt
fio/: CMakeLists.txt  DesignDocument.md
fio/include/: FIOBuffer.h
fio/include/fio/: buffer.h  copy.h  definitions.h  stream.h
fio/src/: FIOBuffer.cc  copy.cc  stream.cc
fio/tests/: test_fio_buffer.cc
src/cpp/: CMakeLists.txt
src/cpp/include/IOIMPL/: SimCalorimeterHitIOImpl.h
src/cpp/include/SIO/: SIOSimCalCollectionHandler.h
src/cpp/src/EXAMPLE/: lcio_rewrite.cc
src/cpp/src/IMPL/: LCIOExceptionHandler.cc
src/cpp/src/MT/: LCReader.cc
src/cpp/src/SIO/: LCIORandomAccessMgr.cc  LCIORecords.cc  SIOReader.cc  SIOSimCalCollectionHandler.cc  SIOWriter.cc
tests/: CMakeLists.txt
